Bug 291741 - Partition Manager crashes when the eSATA link has problems
Summary: Partition Manager crashes when the eSATA link has problems
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Volker Lanz
URL:
Keywords:
: 295075 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-17 08:06 UTC by Sven Eden
Modified: 2012-03-03 14:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Eden 2012-01-17 08:06:05 UTC
Application: partitionmanager-bin (1.0.60)
KDE Platform Version: 4.7.4 (4.7.4) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.2.1-gentoo x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:
Removed a small partition from the start of an externat eSATA drive. Then I grew the remaining partition, which resulted in the need to move 400GB of data.

After an hour of moving, the application simply crashed.

- Unusual behavior I noticed:
The SATA link did seem to have some problems, here are the relevant lines out of dmesg:

--------------------
ata5: exception Emask 0x10 SAct 0x0 SErr 0x4050000 action 0xe frozen
ata5: irq_stat 0x00400040, connection status changed
ata5: SError: { PHYRdyChg CommWake DevExch }
ata5: hard resetting link
ata5: link is slow to respond, please be patient (ready=0)
ata5: SATA link up 3.0 Gbps (SStatus 123 SControl 300)
ata5.00: ATA-6: SAMSUNG HD103SI, 1AG01118, max UDMA/133
ata5.00: 1953525168 sectors, multi 0: LBA48 NCQ (depth 31/32)
ata5.00: configured for UDMA/133
ata5: EH complete
scsi 4:0:0:0: Direct-Access     ATA      SAMSUNG HD103SI  1AG0 PQ: 0 ANSI: 5
sd 4:0:0:0: [sdb] 1953525168 512-byte logical blocks: (1.00 TB/931 GiB)
sd 4:0:0:0: Attached scsi generic sg2 type 0
sd 4:0:0:0: [sdb] Write Protect is off
sd 4:0:0:0: [sdb] Mode Sense: 00 3a 00 00
sd 4:0:0:0: [sdb] Write cache: enabled, read cache: enabled, doesn't support DPO or FUA
 sdb: sdb1 sdb2
sd 4:0:0:0: [sdb] Attached SCSI disk

(...)

ata5.00: exception Emask 0x10 SAct 0x3f SErr 0x400101 action 0x6 frozen
ata5.00: irq_stat 0x08000000, interface fatal error
ata5: SError: { RecovData UnrecovData Handshk }
ata5.00: failed command: WRITE FPDMA QUEUED
ata5.00: cmd 61/00:00:68:39:0d/04:00:10:00:00/40 tag 0 ncq 524288 out
         res 40/00:1c:68:49:0d/00:00:10:00:00/40 Emask 0x10 (ATA bus error)
ata5.00: status: { DRDY }
ata5.00: failed command: WRITE FPDMA QUEUED
ata5.00: cmd 61/00:08:68:3d:0d/04:00:10:00:00/40 tag 1 ncq 524288 out
         res 40/00:1c:68:49:0d/00:00:10:00:00/40 Emask 0x10 (ATA bus error)
ata5.00: status: { DRDY }
ata5.00: failed command: WRITE FPDMA QUEUED
ata5.00: cmd 61/00:10:68:41:0d/04:00:10:00:00/40 tag 2 ncq 524288 out
         res 40/00:1c:68:49:0d/00:00:10:00:00/40 Emask 0x10 (ATA bus error)
ata5.00: status: { DRDY }
ata5.00: failed command: WRITE FPDMA QUEUED
ata5.00: cmd 61/00:18:68:49:0d/04:00:10:00:00/40 tag 3 ncq 524288 out
         res 40/00:1c:68:49:0d/00:00:10:00:00/40 Emask 0x10 (ATA bus error)
ata5.00: status: { DRDY }
ata5.00: failed command: WRITE FPDMA QUEUED
ata5.00: cmd 61/00:20:68:35:0d/04:00:10:00:00/40 tag 4 ncq 524288 out
         res 40/00:1c:68:49:0d/00:00:10:00:00/40 Emask 0x10 (ATA bus error)
ata5.00: status: { DRDY }
ata5.00: failed command: WRITE FPDMA QUEUED
ata5.00: cmd 61/00:28:68:45:0d/04:00:10:00:00/40 tag 5 ncq 524288 out
         res 40/00:1c:68:49:0d/00:00:10:00:00/40 Emask 0x10 (ATA bus error)
ata5.00: status: { DRDY }
ata5: hard resetting link
ata5: SATA link down (SStatus 0 SControl 300)
ata5: hard resetting link
ata5: link is slow to respond, please be patient (ready=0)
ata5: COMRESET failed (errno=-16)
ata5: hard resetting link
ata5: link is slow to respond, please be patient (ready=0)
ata5: COMRESET failed (errno=-16)
ata5: hard resetting link
ata5: link is slow to respond, please be patient (ready=0)
ata5: COMRESET failed (errno=-16)
ata5: limiting SATA link speed to 1.5 Gbps
ata5: hard resetting link
ata5: COMRESET failed (errno=-16)
ata5: reset failed, giving up
ata5.00: disabled
ata5: exception Emask 0x10 SAct 0x0 SErr 0x4050000 action 0xf t4
ata5: irq_stat 0x00400040, connection status changed
ata5: SError: { PHYRdyChg CommWake DevExch }
ata5: hard resetting link
ata5: link is slow to respond, please be patient (ready=0)

(...)

ata5: link is slow to respond, please be patient (ready=0)
ata5: COMRESET failed (errno=-16)
ata5: hard resetting link
ata5: link is slow to respond, please be patient (ready=0)
ata5: COMRESET failed (errno=-16)
ata5: limiting SATA link speed to 1.5 Gbps
ata5: hard resetting link
ata5: COMRESET failed (errno=-16)
ata5: reset failed, giving up
sd 4:0:0:0: [sdb]  Result: hostbyte=0x00 driverbyte=0x08
sd 4:0:0:0: [sdb]  Sense Key : 0xb [current] [descriptor]
Descriptor sense data with sense descriptors (in hex):
        72 0b 00 00 00 00 00 0c 00 0a 80 00 00 00 00 00 
        10 0d 49 68 
sd 4:0:0:0: [sdb]  ASC=0x0 ASCQ=0x0
sd 4:0:0:0: [sdb] CDB: cdb[0]=0x2a: 2a 00 10 0d 39 68 00 04 00 00
end_request: I/O error, dev sdb, sector 269302120
Buffer I/O error on device sdb, logical block 33662765
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662766
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662767
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662768
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662769
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662770
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662771
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662772
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662773
lost page write due to I/O error on sdb
Buffer I/O error on device sdb, logical block 33662774
lost page write due to I/O error on sdb
sd 4:0:0:0: [sdb]  Result: hostbyte=0x00 driverbyte=0x08
sd 4:0:0:0: [sdb]  Sense Key : 0xb [current] [descriptor]
Descriptor sense data with sense descriptors (in hex):
        72 0b 00 00 00 00 00 0c 00 0a 80 00 00 00 00 00 
        10 0d 49 68 
sd 4:0:0:0: [sdb]  ASC=0x0 ASCQ=0x0
sd 4:0:0:0: [sdb] CDB: cdb[0]=0x2a: 2a 00 10 0d 3d 68 00 04 00 00
end_request: I/O error, dev sdb, sector 269303144
sd 4:0:0:0: [sdb]  Result: hostbyte=0x00 driverbyte=0x08
sd 4:0:0:0: [sdb]  Sense Key : 0xb [current] [descriptor]
Descriptor sense data with sense descriptors (in hex):
        72 0b 00 00 00 00 00 0c 00 0a 80 00 00 00 00 00 
        10 0d 49 68 
sd 4:0:0:0: [sdb]  ASC=0x0 ASCQ=0x0
sd 4:0:0:0: [sdb] CDB: cdb[0]=0x2a: 2a 00 10 0d 41 68 00 04 00 00
end_request: I/O error, dev sdb, sector 269304168
sd 4:0:0:0: [sdb]  Result: hostbyte=0x00 driverbyte=0x08
sd 4:0:0:0: [sdb]  Sense Key : 0xb [current] [descriptor]
Descriptor sense data with sense descriptors (in hex):
        72 0b 00 00 00 00 00 0c 00 0a 80 00 00 00 00 00 
        10 0d 49 68 
sd 4:0:0:0: [sdb]  ASC=0x0 ASCQ=0x0
sd 4:0:0:0: [sdb] CDB: cdb[0]=0x2a: 2a 00 10 0d 49 68 00 04 00 00
end_request: I/O error, dev sdb, sector 269306216
sd 4:0:0:0: [sdb]  Result: hostbyte=0x00 driverbyte=0x08
sd 4:0:0:0: [sdb]  Sense Key : 0xb [current] [descriptor]
Descriptor sense data with sense descriptors (in hex):
        72 0b 00 00 00 00 00 0c 00 0a 80 00 00 00 00 00 
        10 0d 49 68 
sd 4:0:0:0: [sdb]  ASC=0x0 ASCQ=0x0
sd 4:0:0:0: [sdb] CDB: cdb[0]=0x2a: 2a 00 10 0d 35 68 00 04 00 00
end_request: I/O error, dev sdb, sector 269301096
sd 4:0:0:0: [sdb]  Result: hostbyte=0x00 driverbyte=0x08
sd 4:0:0:0: [sdb]  Sense Key : 0xb [current] [descriptor]
Descriptor sense data with sense descriptors (in hex):
        72 0b 00 00 00 00 00 0c 00 0a 80 00 00 00 00 00 
        10 0d 49 68 
sd 4:0:0:0: [sdb]  ASC=0x0 ASCQ=0x0
sd 4:0:0:0: [sdb] CDB: cdb[0]=0x2a: 2a 00 10 0d 45 68 00 04 00 00
end_request: I/O error, dev sdb, sector 269305192
sd 4:0:0:0: rejecting I/O to offline device
ata5: EH complete
sd 4:0:0:0: rejecting I/O to offline device
ata5.00: detaching (SCSI 4:0:0:0)
sd 4:0:0:0: [sdb] Synchronizing SCSI cache
sd 4:0:0:0: [sdb]  Result: hostbyte=0x04 driverbyte=0x00
sd 4:0:0:0: [sdb] Stopping disk
sd 4:0:0:0: [sdb] START_STOP FAILED
sd 4:0:0:0: [sdb]  Result: hostbyte=0x04 driverbyte=0x00
--------------------

The crash started with an frozen operation and an ATA Bus Error. I have no idea why, though, the drive is in perfect working condition. Well, at least this is what scandisk (Windows 7), fsck.ntfs and S.M.A.R.T say. And the external SATA port has never failed before.

However, if the Bus fails and the drive goes bye bye, partition manager should not.

-- Backtrace:
Application: KDE Partition Manager (partitionmanager-bin), signal: Aborted
[Current thread is 1 (Thread 0x7ffd515f2780 (LWP 30330))]

Thread 4 (Thread 0x7ffd40670700 (LWP 30333)):
#0  0x00007ffd4ec90173 in poll () from /lib64/libc.so.6
#1  0x00007ffd4af62de4 in g_main_context_poll (n_fds=1, fds=0x82daf0, timeout=-1, context=0x82dc40, priority=<optimized out>) at gmain.c:3402
#2  g_main_context_iterate (context=0x82dc40, block=1, dispatch=1, self=<optimized out>) at gmain.c:3084
#3  0x00007ffd4af632a1 in g_main_context_iteration (context=0x82dc40, may_block=1) at gmain.c:3152
#4  0x00007ffd4f5f4946 in QEventDispatcherGlib::processEvents (this=0x82db50, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007ffd4f5c8ce2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007ffd4f5c8f24 in QEventLoop::exec (this=0x7ffd4066fdc0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007ffd4f4dd644 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007ffd4f5aa638 in QInotifyFileSystemWatcherEngine::run (this=0x81dd60) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007ffd4f4dfe95 in QThreadPrivate::start (arg=0x81dd60) at thread/qthread_unix.cpp:331
#10 0x00007ffd4dba4d4c in start_thread () from /lib64/libpthread.so.0
#11 0x00007ffd4ec98ded in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7ffd3e66c700 (LWP 30429)):
#0  0x00007ffd4f5f5331 in QTimerInfoList::updateCurrentTime (this=0xabb880) at kernel/qeventdispatcher_unix.cpp:338
#1  0x00007ffd4f5f56e5 in QTimerInfoList::timerWait (this=0xabb880, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#2  0x00007ffd4f5f412c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7ffd3e66bc70) at kernel/qeventdispatcher_glib.cpp:136
#3  0x00007ffd4f5f41d5 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#4  0x00007ffd4af61e46 in g_main_context_prepare (context=0xabab00, priority=0x7ffd3e66bcec) at gmain.c:2762
#5  0x00007ffd4af62c69 in g_main_context_iterate (context=0xabab00, block=1, dispatch=1, self=<optimized out>) at gmain.c:3069
#6  0x00007ffd4af632a1 in g_main_context_iteration (context=0xabab00, may_block=1) at gmain.c:3152
#7  0x00007ffd4f5f4946 in QEventDispatcherGlib::processEvents (this=0x8761b0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#8  0x00007ffd4f5c8ce2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#9  0x00007ffd4f5c8f24 in QEventLoop::exec (this=0x7ffd3e66be00, flags=...) at kernel/qeventloop.cpp:201
#10 0x00007ffd4f4dd644 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#11 0x00007ffd4f4dfe95 in QThreadPrivate::start (arg=0x8e07f0) at thread/qthread_unix.cpp:331
#12 0x00007ffd4dba4d4c in start_thread () from /lib64/libpthread.so.0
#13 0x00007ffd4ec98ded in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7ffd3ee6d700 (LWP 30456)):
[KCrash Handler]
#6  0x00007ffd4ebf4875 in raise () from /lib64/libc.so.6
#7  0x00007ffd4ebf5b75 in abort () from /lib64/libc.so.6
#8  0x00007ffd408a3643 in ped_assert (cond_text=0x7ffd408c9e55 "disk != NULL", file=0x7ffd408c9e38 "disk.c", line=431, function=0x7ffd408caf80 "ped_disk_destroy") at debug.c:111
#9  0x00007ffd408a64d1 in ped_disk_destroy (disk=<optimized out>) at disk.c:431
#10 0x00007ffd40aebdbb in LibPartedPartitionTable::~LibPartedPartitionTable() () from /usr/lib64/kde4/pmlibpartedbackendplugin.so
#11 0x00007ffd40aebe1a in LibPartedPartitionTable::~LibPartedPartitionTable() () from /usr/lib64/kde4/pmlibpartedbackendplugin.so
#12 0x00007ffd40aeed89 in LibPartedDevice::openPartitionTable() () from /usr/lib64/kde4/pmlibpartedbackendplugin.so
#13 0x00007ffd511563d2 in SetPartGeometryJob::run(Report&) () from /usr/lib64/libpartitionmanagerprivate.so
#14 0x00007ffd5115261f in ResizeOperation::move(Report&) () from /usr/lib64/libpartitionmanagerprivate.so
#15 0x00007ffd5115135d in ResizeOperation::execute(Report&) () from /usr/lib64/libpartitionmanagerprivate.so
#16 0x00007ffd5113c5c2 in OperationRunner::run() () from /usr/lib64/libpartitionmanagerprivate.so
#17 0x00007ffd4f4dfe95 in QThreadPrivate::start (arg=0x85d5e0) at thread/qthread_unix.cpp:331
#18 0x00007ffd4dba4d4c in start_thread () from /lib64/libpthread.so.0
#19 0x00007ffd4ec98ded in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7ffd515f2780 (LWP 30330)):
#0  0x00007ffd4ec90173 in poll () from /lib64/libc.so.6
#1  0x00007ffd487066ba in _xcb_conn_wait (c=0x71af40, cond=<optimized out>, vector=0x7fff512c6938, count=0x7fff512c6934) at /var/tmp/portage/x11-libs/libxcb-1.7/work/libxcb-1.7/src/xcb_conn.c:313
#2  0x00007ffd48706c03 in _xcb_out_send (c=0x71af40, vector=0x7fff512c69c0, count=3) at /var/tmp/portage/x11-libs/libxcb-1.7/work/libxcb-1.7/src/xcb_out.c:338
#3  0x00007ffd48706c94 in xcb_writev (c=0x71af40, vector=<optimized out>, count=<optimized out>, requests=5) at /var/tmp/portage/x11-libs/libxcb-1.7/work/libxcb-1.7/src/xcb_out.c:286
#4  0x00007ffd4c404471 in _XSend (dpy=0x716ba0, data=<optimized out>, size=<optimized out>) at /var/tmp/portage/x11-libs/libX11-1.4.4/work/libX11-1.4.4/src/xcb_io.c:494
#5  0x00007ffd4c4049a7 in _XReply (dpy=0x716ba0, rep=0x7fff512c6aa0, extra=0, discard=1) at /var/tmp/portage/x11-libs/libX11-1.4.4/work/libX11-1.4.4/src/xcb_io.c:580
#6  0x00007ffd4c3f9a3f in XQueryPointer (dpy=0x716ba0, w=175, root=0x7fff512c6b48, child=0x7fff512c6b40, root_x=0x7fff512c6b70, root_y=0x7fff512c6b60, win_x=0x7fff512c6b5c, win_y=0x7fff512c6b58, mask=0x7fff512c6b54) at /var/tmp/portage/x11-libs/libX11-1.4.4/work/libX11-1.4.4/src/QuPntr.c:48
#7  0x00007ffd4fb3c8a4 in QCursor::pos () at kernel/qcursor_x11.cpp:159
#8  0x00007ffd4ffbaa50 in QAbstractItemView::verticalScrollbarValueChanged (this=0x90c7f0, value=<optimized out>) at itemviews/qabstractitemview.cpp:2645
#9  0x00007ffd4ffbafb5 in QAbstractItemView::qt_metacall (this=0x90c7f0, _c=QMetaObject::InvokeMetaMethod, _id=26, _a=0x7fff512c6de0) at .moc/release-shared/moc_qabstractitemview.cpp:244
#10 0x00007ffd4ffff605 in QTreeView::qt_metacall (this=0x90c7f0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff512c6de0) at .moc/release-shared/moc_qtreeview.cpp:119
#11 0x00007ffd50035a55 in QTreeWidget::qt_metacall (this=0x90c7f0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff512c6de0) at .moc/release-shared/moc_qtreewidget.cpp:129
#12 0x00007ffd4f5de0e7 in QMetaObject::activate (sender=0x8bc040, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff512c6de0) at kernel/qobject.cpp:3278
#13 0x00007ffd5011beae in QAbstractSlider::valueChanged (this=<optimized out>, _t1=26) at .moc/release-shared/moc_qabstractslider.cpp:182
#14 0x00007ffd511a3ba4 in TreeLog::onNewLogMessage(Log::Level, QString const&) () from /usr/lib64/libpartitionmanagerprivate.so
#15 0x00007ffd5112a1da in TreeLog::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libpartitionmanagerprivate.so
#16 0x00007ffd4f5ddbea in QObject::event (this=0x8a0790, e=<optimized out>) at kernel/qobject.cpp:1217
#17 0x00007ffd4fb0630d in QWidget::event (this=0x8a0790, event=0xb7c8a0) at kernel/qwidget.cpp:8754
#18 0x00007ffd4fab5064 in QApplicationPrivate::notify_helper (this=0x70f070, receiver=0x8a0790, e=0xb7c8a0) at kernel/qapplication.cpp:4481
#19 0x00007ffd4fab9bda in QApplication::notify (this=<optimized out>, receiver=0x8a0790, e=0xb7c8a0) at kernel/qapplication.cpp:4360
#20 0x00007ffd507cbe06 in KApplication::notify (this=0x7fff512c7b70, receiver=0x8a0790, event=0xb7c8a0) at /home/portage/kde-base/kdelibs-4.7.4-r11/work/kdelibs-4.7.4/kdeui/kernel/kapplication.cpp:311
#21 0x00007ffd4f5c993b in QCoreApplication::notifyInternal (this=0x7fff512c7b70, receiver=0x8a0790, event=0xb7c8a0) at kernel/qcoreapplication.cpp:787
#22 0x00007ffd4f5cd0f4 in sendEvent (event=0xb7c8a0, receiver=0x8a0790) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x6f1d00) at kernel/qcoreapplication.cpp:1428
#24 0x00007ffd4f5f4753 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#25 postEventSourceDispatch (s=0x711da0) at kernel/qeventdispatcher_glib.cpp:277
#26 0x00007ffd4af628d2 in g_main_dispatch (context=0x711cb0) at gmain.c:2441
#27 g_main_context_dispatch (context=0x711cb0) at gmain.c:3011
#28 0x00007ffd4af630c8 in g_main_context_iterate (context=0x711cb0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3089
#29 0x00007ffd4af632a1 in g_main_context_iteration (context=0x711cb0, may_block=1) at gmain.c:3152
#30 0x00007ffd4f5f48ef in QEventDispatcherGlib::processEvents (this=0x70d110, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#31 0x00007ffd4fb5a79e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007ffd4f5c8ce2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007ffd4f5c8f24 in QEventLoop::exec (this=0x7fff512c7b10, flags=...) at kernel/qeventloop.cpp:201
#34 0x00007ffd4f5cd3ab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#35 0x000000000040155a in main ()

Reported using DrKonqi
Comment 1 Volker Lanz 2012-01-17 11:00:50 UTC
SVN commit 1274076 by vlanz:

Check if the ped disk could actually be opened before trying to destroy it.



 M  +2 -1      libpartedpartitiontable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1274076
Comment 2 Sven Eden 2012-01-17 15:29:34 UTC
Ah! I didn't see the assertion.

Well, in the meantime I have opened the disk (after a manual restart) in gparted, and it showed (and found) no errors. The partition was moved, but not expanded. Windows XP scandisk found no errors, and an analysis by O&O Defrag showed, that all data has been moved successfully. This was quite astounding, because partitionmanager just reported it would need at least four hours to finish before it crashed.

However, thanks a lot for the quick response!
Comment 3 Volker Lanz 2012-03-03 14:45:39 UTC
*** Bug 295075 has been marked as a duplicate of this bug. ***