Check if the ped disk could actually be opened before trying to destroy it.

BUG:291741

svn path=/trunk/extragear/sysadmin/partitionmanager/; revision=1274076